<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainback"
    android:orientation="vertical"
    tools:context=".Main"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"    >



    <LinearLayout
        android:id="@+id/LL_viewers"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/mainwhite"
        android:orientation="horizontal"

        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/tv_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:layout_marginLeft="20dp"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_view_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/_0"
            android:textSize="19sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LL_likers"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="7dp"
        android:background="@color/mainwhite"
        android:orientation="horizontal">




        <TextView
            android:id="@+id/tv_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/like"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:text="@string/_0"
            android:textSize="19sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_likers"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>


        <LinearLayout
            android:id="@+id/LL_Commenters"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="7dp"
            android:background="@color/mainwhite"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_commenters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/comments"
                android:textSize="19sp" />


            <TextView
                android:id="@+id/tv_commenters_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="@string/_0"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_commenters"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">


                </android.support.v7.widget.RecyclerView>
            </LinearLayout>


        </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_Mentions"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="7dp"
        android:background="@color/mainwhite"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_mentions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/mentions"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/tv_mentions_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:text="@string/_0"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_mentions"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_Reposters"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@color/mainwhite"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_reposters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/reposters"
                android:textSize="19sp" />


            <TextView
                android:id="@+id/tv_reposters_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="@string/_0"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reposters"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">


                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/mainwhite"
        android:orientation="horizontal"

        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/tv_bookmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:layout_marginLeft="20dp"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_bookmarks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/_0"
            android:textSize="19sp"/>
    </LinearLayout>



        </LinearLayout>






